more alignment fixes for locations and contact

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -151,7 +151,8 @@ h4 {
 }
 
 .location {
-  width: 300px;
+  width: 280px;
+  height: 257px;
   display: flex;
   flex-basis: 280px;
   flex-direction: column;
@@ -160,6 +161,7 @@ h4 {
   margin: 5px 20px;
   padding: 10px;
   opacity: 1.0;
+  text-align: center;
 }
 
 /* Contact us section */
@@ -169,7 +171,7 @@ h4 {
 
 #contact h2 {
   padding: 10px;
-  width: 1200px;
+  width: 1180px;
   height: 38px;
   text-align: center;
 }
